--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: isolate_pool
-description: A future and isolate thread pool project
+name: async_pool
+description: A future and async thread pool project.has a syntax similar to CompletableFuture in java
 version: 0.1.0
-homepage: https://github.com/yixiaco/isolate_pool
+homepage: https://github.com/yixiaco/async_pool
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
