--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: async_pool
 description: A future and async thread pool project.has a syntax similar to CompletableFuture in java
-version: 0.1.1
+version: 0.2.0
 homepage: https://github.com/yixiaco/async_pool
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
 
 dev_dependencies:
+  lints: ^3.0.0
   test: ^1.25.2
